<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hr.ja</groupId>
    <artifactId>myhttp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.target>14</maven.compiler.target>
        <maven.compiler.source>14</maven.compiler.source>
        <java.version>14</java.version>
        <undertow.version>2.2.0.Final</undertow.version>

    </properties>
    <dependencies>

<!--        <dependency>-->
<!--            <groupId>cz.habarta.typescript-generator</groupId>-->
<!--            <artifactId>typescript-generator-core</artifactId>-->
<!--            <version>2.26.723</version>-->
<!--        </dependency>-->


        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.3</version>
        </dependency>

        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-core</artifactId>
            <version>2.9.3</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>io.javalin</groupId>-->
<!--            <artifactId>javalin</artifactId>-->
<!--            <version>3.11.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
            <version>5.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>io.undertow</groupId>-->
<!--            <artifactId>undertow-core</artifactId>-->
<!--            <version>${undertow.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.undertow</groupId>-->
<!--            <artifactId>undertow-servlet</artifactId>-->
<!--            <version>${undertow.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.undertow</groupId>-->
<!--            <artifactId>undertow-websockets-jsr</artifactId>-->
<!--            <version>${undertow.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.12</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.26</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>19.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker-gae</artifactId>
            <version>2.3.30</version>
        </dependency>
    </dependencies>
    <build>

        <plugins>



            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                    <release>14</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>